--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
             <h3>Daftar Object</h2>
         </div>
         <div>
-            <canvas id="gl-canvas" width="750" height="800 ">
+            <canvas id="gl-canvas" width="900" height="800 ">
                 Oops ... your browser doesn't support the HTML5 canvas element
             </canvas>
         </div>
@@ -61,11 +61,12 @@
                 <select name="draw" id="draw">
                     <option value="Line">Line</option>
                     <option value="Square">Square</option>
+                    <option value="Rectangle">Rectangle</option>
                     <option value="Polygon">Polygon</option>
                 </select>
             </div>
             <div>
-                <input type="color">
+                <input type="color" id="color">
             </div>
             <div>
                 <button  class="button">Save</button>
@@ -73,7 +74,7 @@
             </div>
             
             <div>
-                <button class="button">clear canvas</button>
+                <button class="button" id="clear">clear canvas</button>
             </div>
         </div>
     </div>
