feat: save and load

--- a/src/index.html
+++ b/src/index.html
@@ -69,8 +69,11 @@
                 <input type="color" id="color">
             </div>
             <div>
-                <button  class="button">Save</button>
-                <button  class="button">Load</button>
+                <input type="file" id="file-input">
+            </div>
+            <div>
+                <button  class="button" onclick="save()">Save</button>
+                <button  class="button" onclick="load()">Load</button>
             </div>
             
             <div>
