feat: delete and add point in polygon

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Grafika Komputer-WebGL</title>
     <link rel="stylesheet" href="stylesheet.css">
     <script type="text/javascript" src="utility.js"></script>
-    <script type="text/javascript" src="Point.js"></script>
+    <!-- <script type="text/javascript" src="Point.js"></script> -->
     <script type="text/javascript" src="GenerateObject.js"></script>
     <script type="text/javascript" src="Model.js"></script>
     <script type="text/javascript" src="script.js"></script>
@@ -85,6 +85,9 @@
             </div>
             <div id = "mode">
 
+            </div>
+            <div id="mode-vertex">
+            
             </div>
         </div>
     </div>
